widget/windows/nsWindow.cpp
@@ -4208,7 +4208,9 @@ uint32_t nsWindow::GetMaxTouchPoints() const {
   return WinUtils::GetMaxTouchPoints();
 }
 
-void nsWindow::SetWindowClass(const nsAString& xulWinType) {
+void nsWindow::SetWindowClass(const nsAString& xulWinType,
+                              const nsAString& xulWinClass,
+                              const nsAString& xulWinName) {
   mIsEarlyBlankWindow = xulWinType.EqualsLiteral("navigator:blank");
 }
 
