xpfe/appshell/AppWindow.cpp
@@ -1628,11 +1628,12 @@ void AppWindow::SyncAttributesToWidget() {
 
   NS_ENSURE_TRUE_VOID(mWindow);
 
-  // "windowtype" attribute
+  // "windowtype", "windowclass", "windowname" attributes
+  nsAutoString windowClassAttr, windowNameAttr;
   windowElement->GetAttr(nsGkAtoms::windowtype, attr);
-  if (!attr.IsEmpty()) {
-    mWindow->SetWindowClass(attr);
-  }
+  windowElement->GetAttribute(u"windowclass"_ns, windowClassAttr);
+  windowElement->GetAttribute(u"windowname"_ns, windowNameAttr);
+  mWindow->SetWindowClass(attr, windowClassAttr, windowNameAttr);
 
   NS_ENSURE_TRUE_VOID(mWindow);
 
